tests/ui/moves/suggest-clone.stderr
error[E0507]: cannot move out of `*foo` which is behind a shared reference
  --> $DIR/suggest-clone.rs:10:5
   |
LL |     foo.foo();
   |     ^^^ ----- `*foo` moved due to this method call
   |     |
   |     move occurs because `*foo` has type `Foo`, which does not implement the `Copy` trait
   |
note: `Foo::foo` takes ownership of the receiver `self`, which moves `*foo`
  --> $DIR/suggest-clone.rs:6:12
   |
LL |     fn foo(self) {}
   |            ^^^^
help: you can `clone` the value and consume it, but this might not be your desired behavior
   |
LL |     <Foo as Clone>::clone(&foo).foo();
   |     +++++++++++++++++++++++   +
help: consider cloning the value if the performance cost is acceptable
   |
LL |     foo.clone().foo();
   |        ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
